--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "intro.js": "^7.2.0",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
-    "react-multi-carousel": "^2.8.5"
+    "react-multi-carousel": "^2.8.5",
+    "sass": "^1.77.2"
   },
   "devDependencies": {
     "postcss": "^8",
